[package]
name = "cumulus-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = [ "derive" ] }
hash-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.25.0", default-features = false }
trie-db = { version = "0.22.0", default-features = false }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-externalities = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/paritytech/polkadot", default-features = false, features = [ "wasm-api" ], branch = "rococo-v1" }

[dev-dependencies]
sc-client-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
cumulus-test-relay-sproof-builder = { path = "../test/relay-sproof-builder" }
cumulus-test-client = { path = "../test/client" }
env_logger = "0.7.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-executive/std",
	"memory-db/std",
	"hash-db/std",
	"trie-db/std",
	"sp-state-machine/std",
	"sp-externalities/std",
	"sp-trie/std",
	"parachain/std",
]
