[package]
name = "cumulus-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-collator = { path = "../collator" }
cumulus-primitives = { path = "../primitives" }
cumulus-network = { path = "../network" }

# Substrate dependencies
sc-service = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }

# Polkadot dependencies
polkadot-collator = { git = "https://github.com/paritytech/polkadot", branch = "cecton-fix-int-test-again" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "cecton-fix-int-test-again" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "cecton-fix-int-test-again" }
# TODO should be dev dependency
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "cecton-fix-int-test-again" }

[dev-dependencies]
