[package]
name = "cumulus-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-collator = { path = "../collator" }
cumulus-primitives = { path = "../primitives" }
cumulus-network = { path = "../network" }

# Substrate dependencies
sc-service = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-client-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-consensus = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-inherents = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }

# Polkadot dependencies
polkadot-collator = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
polkadot-primitives = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
polkadot-service = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
