[package]
name = "cumulus-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-collator = { path = "../collator" }
cumulus-primitives = { path = "../primitives" }

# Substrate dependencies
sc-service = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ser-tmp-rococo-v1" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "ser-tmp-rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "ser-tmp-rococo-v1" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "ser-tmp-rococo-v1" }

# Other deps
futures = "0.3.6"
tracing = "0.1.22"
