[package]
name = "cumulus-upward-message"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

# Polkadot deps
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }

# All these should be optional dependenices, but given the perfect Cargo, it is not possible.
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false, optional = true }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false, optional = true }
westend-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false, optional = true }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
]
kusama = [
	"kusama-runtime",
	"kusama-runtime/disable-runtime-api",
]
polkadot = [
	"polkadot-runtime",
	"polkadot-runtime/disable-runtime-api",
]
rococo = [
	"rococo-runtime",
	"rococo-runtime/disable-runtime-api",
]
westend = [
	"westend-runtime",
	"westend-runtime/disable-runtime-api",
]
