[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "cumulus-xcm-handler"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp-working", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp-working", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp-working", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"polkadot-parachain/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"xcm/std",
	"xcm-executor/std",
]
