[package]
name = "cumulus-client-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
url = "2.4.0"

# Substrate
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
