[package]
name = "cumulus-client-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parking_lot = "0.12.1"
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
futures = "0.3.21"
tracing = "0.1.25"

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }

# Polkadot
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }

# Cumulus
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-network = { path = "../network" }
cumulus-primitives-core = { path = "../../primitives/core" }

[dev-dependencies]
async-trait = "0.1.73"

# Substrate
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }

# Polkadot
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }

# Cumulus
cumulus-test-client = { path = "../../test/client" }
cumulus-test-runtime = { path = "../../test/runtime" }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder" }
